--- a/style.css
+++ b/style.css
@@ -13,8 +13,15 @@ h1 {
 }
 
 h1 .technologist-emoji {
-  font-size: 40px;
+  width:  40px;
+  height: 40px;
+  display: inline-block;
   padding-right: 0.3em;
+
+  background-image: url('images/technologist_emoji.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 h1 strong {
